--- a/ifelse statements/2.1.05 If Condition (Exercise 05)/2.1.05 If Condition (Exercise 05).csproj
+++ b/ifelse statements/2.1.05 If Condition (Exercise 05)/2.1.05 If Condition (Exercise 05).csproj
@@ -3,8 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+    <RootNamespace>_2._1._05_If_Condition__Exercise_05_</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
 </Project>
