New exercise added

--- a/2. Selection statements/2.1.01.1 If Condition (Exercise 01)/2.1.01.1 If Condition (Exercise 01).csproj
+++ b/2. Selection statements/2.1.01.1 If Condition (Exercise 01)/2.1.01.1 If Condition (Exercise 01).csproj
@@ -8,4 +8,10 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<Using Include="System.ComponentModel"/>
+		<Using Include="System.Runtime.ConstrainedExecution"/>
+		<Using Include="System.Xml.XPath"/>
+	</ItemGroup>
+
 </Project>
